# weather

./: README.md  Taskfile.yml  pyproject.toml
weather/: main.py  meteomatics.py  utils.py
weatherforecastcli/: config.py  errors.py  geocoding.py  main.py  meteomatics.py  openmeteo.py  positionstack.py  render.py  utils.py
